crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_blockquote_multiline_open_trailing_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..43
  BLOCK_QUOTE@0..43
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK_DIV@2..43
      HTML_BLOCK_TAG@2..18
        TEXT@2..6 "<div"
        NEWLINE@6..7 "\n"
        BLOCK_QUOTE_MARKER@7..8 ">"
        WHITESPACE@8..9 " "
        WHITESPACE@9..11 "  "
        HTML_ATTRS@11..17
          TEXT@11..15 "id=\""
          ATTR_ID@15..16 "x"
          TEXT@16..17 "\""
        TEXT@17..18 ">"
      PARAGRAPH@18..34
        TEXT@18..26 "trailing"
        NEWLINE@26..27 "\n"
        BLOCK_QUOTE_MARKER@27..28 ">"
        WHITESPACE@28..29 " "
        TEXT@29..33 "body"
        NEWLINE@33..34 "\n"
      HTML_BLOCK_TAG@34..43
        BLOCK_QUOTE_MARKER@34..35 ">"
        WHITESPACE@35..36 " "
        TEXT@36..42 "</div>"
        NEWLINE@42..43 "\n"
