crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_blockquote_multiline_trailing_close_text_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..31
  BLOCK_QUOTE@0..31
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..31
      HTML_BLOCK_TAG@2..7
        TEXT@2..6 "<div"
        NEWLINE@6..7 "\n"
      HTML_BLOCK_CONTENT@7..31
        BLOCK_QUOTE_MARKER@7..8 ">"
        WHITESPACE@8..9 " "
        TEXT@9..30 "  id=\"x\">foo</div>bar"
        NEWLINE@30..31 "\n"
